--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 # 构建系统生成的目录
 .gradle
 .gradle/
-build/
+*/build/
+**/build/
+/build
 /captures
+!**/src/**/build/
 
 # Android Studio 的本地配置文件
 .idea/
